--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ input {
 
 /* HTML: <div class="loader"></div> */
 .loader {
+  display: none;
   width: 40px;
   aspect-ratio: 2;
   --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
